--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 }
 </script>
 </head>
-<body class="bg-gray-100 font-sans antialiased text-gray-900">
-    <div id="root"></div>
+<body class="bg-slate-900 font-sans antialiased text-slate-800 selection:bg-indigo-500 selection:text-white relative overflow-x-hidden">
+    <!-- Fixed Background with Overlay -->
+    <div class="fixed inset-0 z-[-1]">
+        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2670&auto=format&fit=crop" alt="Background" class="w-full h-full object-cover opacity-10 blur-[2px]" />
+        <div class="absolute inset-0 bg-gradient-to-br from-slate-900 via-slate-900/95 to-indigo-900/90"></div>
+    </div>
+    <div id="root" class="relative z-10"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
